feat: improve docker image build

--- a/.github/workflows/build-image-tag.yml
+++ b/.github/workflows/build-image-tag.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64,linux/arm64/v8
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: v${{ steps.meta.outputs.labels }}
