--- a/.github/workflows/build-image-latest.yml
+++ b/.github/workflows/build-image-latest.yml
@@ -25,6 +25,6 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v3
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64,linux/arm64/v8
           push: true
           tags: tchoupinax/wolapp:latest
